NXP-32696: Introduce a common document type for tests